# CraftMine

./: .gitignore  Cargo.toml  flake.nix
asset/: Cargo.toml
asset/src/: atlas.rs  block_model.rs  block_model_definition.rs  lib.rs  model.rs  resource.rs
asset_java/: Cargo.toml
asset_java/src/: block_model.rs  lib.rs  resource.rs  version.rs
proto/: Cargo.toml
proto/src/: lib.rs
proto_derive/: Cargo.toml
src/: block.rs  index.rs  main.rs  world.rs
